# kalman-filter

./: .gitignore  LICENSE  README.md
cpp-implementation/: CMakeLists.txt
cpp-implementation/include/: data_generation.hpp  kalman_filter.hpp  plotter.hpp
cpp-implementation/src/: data_generation.cpp  kalman_filter.cpp  main.cpp  plotter.cpp
python-implementation/: main.py
python-implementation/kalman_filter/: data_generation.py  kalman_filter.py  plotter.py
